arm64: dts: elvees: elvsmarccb: Describe INA260 power monitor
TI INA260 power monitor is connected to I2C0.

Issue: #MCOM03SW-1750
Change-Id: Ic2ad7d71ae0b46a476475c6ac83bccff9f6a2df8
Signed-off-by: Timur Prokopenko <tprokopenko@elvees.com>

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-elvsmarccb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-elvsmarccb-r1.0.dts
@@ -110,6 +110,11 @@
 	status = "okay";
 	clock-frequency = <400000>;
 
+	ina260@40 {
+		compatible = "ti,ina260";
+		reg = <0x40>;
+	};
+
 	fancontrol: emc2303@4d {
 		compatible = "microchip,emc2305";
 		reg = <0x4d>;
