dt-bindings: vendor-prefixes: Add ELVEES R&D Center
Add the "elvees" vendor prefix for ELVEES R&D Center
Website: https://elvees.ru/

Issue: #MCOM03SW-715
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>
Change-Id: I251d69c49963ae15b2cb0a6100f19168e320a4a6

--- a/Documentation/devicetree/bindings/vendor-prefixes.yaml
+++ b/Documentation/devicetree/bindings/vendor-prefixes.yaml
@@ -319,6 +319,8 @@ patternProperties:
     description: Elgin S/A.
   "^elida,.*":
     description: Shenzhen Elida Technology Co., Ltd.
+  "^elvees,.*":
+    description: RnD Center "ELVEES", JSC
   "^embest,.*":
     description: Shenzhen Embest Technology Co., Ltd.
   "^emlid,.*":
