arm64: dts: elvees: ngfwcb: Describe EMC2303 fan controller
Microchip EMC2303 fan controller is connected to I2C0.

Issue: #MCOM03SW-1844
Change-Id: Iab417b9a8fea2772d6530d37b506b9fd4a083d1c
Signed-off-by: Timur Prokopenko <tprokopenko@elvees.com>
(cherry picked from commit 1b9eaab422fa7765a91977b0260f560a5ff9ac3e)

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
@@ -93,6 +93,30 @@
 		compatible = "ti,lm73";
 		reg = <0x4a>;
 	};
+
+	fancontrol: emc2303@4d {
+		compatible = "microchip,emc2305";
+		reg = <0x4d>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		microchip,pwm-separate;
+		#cooling-cells = <2>;
+
+		channel@0 {
+			reg = <0>;
+			microchip,pwm-push-pull;
+		};
+
+		channel@1 {
+			reg = <1>;
+			microchip,pwm-push-pull;
+		};
+
+		channel@2 {
+			reg = <2>;
+			microchip,pwm-push-pull;
+		};
+	};
 };
 
 &i2c2 {
