dt-bindings: clock: mcom03: Add missing maintainers
Issue: #MCOM03SW-715
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>
Change-Id: I0e2aa0336302f39be3c7711cb10105a75e1d6f97

--- a/Documentation/devicetree/bindings/clock/elvees,mcom03-clk-ucg.yaml
+++ b/Documentation/devicetree/bindings/clock/elvees,mcom03-clk-ucg.yaml
@@ -6,6 +6,9 @@ $schema: http://devicetree.org/meta-schemas/core.yaml#
 
 title: MCom-03 UCG
 
+maintainers:
+  - Vasiliy Zasukhin <vzasukhin@elvees.com>
+
 properties:
   compatible:
     enum:
