--- a/Documentation/devicetree/bindings/vendor-prefixes.yaml
+++ b/Documentation/devicetree/bindings/vendor-prefixes.yaml
@@ -683,6 +683,8 @@ patternProperties:
     description: MiraMEMS Sensing Technology Co., Ltd.
   "^mitsubishi,.*":
     description: Mitsubishi Electric Corporation
+  "^moortec,.*":
+    description: Moortec Semiconductor binding
   "^mosaixtech,.*":
     description: Mosaix Technologies, Inc.
   "^motorola,.*":
