arm64: dts: elvees: mcom03bub: Enable UART3
Also enabled RTS and CTS pins for testing with external loop.

Issue: #MCOM03SW-1457
Change-Id: If67ad2606a33ea2190884a3ecd6e210f537caa23

--- a/arch/arm64/boot/dts/elvees/mcom03-bub-r1.3.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-bub-r1.3.0.dts
@@ -49,6 +49,11 @@
 	status = "okay";
 };
 
+&uart3 {
+	status = "okay";
+	pinctrl-0 = <&uart3_mux_data &uart3_mux_rtscts>;
+};
+
 &sdhci0 {
 	status = "okay";
 
