arm64: dts: elvees: Fix UART3 pins
Pins UART3_SIN/UART3_SOUT were mixed up with UART3_OUT1/UART3_OUT2.

Issue: #MCOM03-1890
Issue: #MCOM03SW-1457
Change-Id: If191bf1d0201790134b3b711902ba1d179ff6a75

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -671,9 +671,9 @@
 				snps,mux-individual-pins;
 				gpio-ranges = <&gpio0a 0 0 8>;
 
-				uart3_mux_data: uart3-mux-data {
-					data {
-						/* groups = sin, sout */
+				uart3_mux_out1out2: uart3-mux-out1out2 {
+					out1out2 {
+						/* groups = out1_n, out2_n */
 						groups = "pin0", "pin1";
 						function = "HW";
 					};
@@ -703,9 +703,9 @@
 				snps,mux-individual-pins;
 				gpio-ranges = <&gpio0b 0 0 8>;
 
-				uart3_portb_mux_modem: uart3-portb-mux-modem {
-					modem_prog {
-						/* groups = out1_n, out2_n */
+				uart3_mux_data: uart3-mux-data {
+					data {
+						/* groups = sin, sout */
 						groups = "pin0", "pin1";
 						function = "HW";
 					};
