arm64: dts: elvees: Split ECAM03DM 1.0 device tree
Split ECAM03DM 1.0 device tree into two device trees: one for
ECAM03BL 1.0 and one for ECAM03DM 1.0.
Common part is placed in mcom03-ecam03-common.dtsi.

Issue: #IPCAMSW-2368
Change-Id: I1550b269363c40a638e68ead3a70202deb46a37d

--- a/arch/arm64/boot/dts/elvees/mcom03-ecam03bl-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-ecam03bl-r1.0.dts
@@ -11,8 +11,8 @@
 #include "mcom03-ecam03-common.dtsi"
 
 / {
-	model = "ECAM03DM r1.0";
-	compatible = "elvees,ecam03dm-r1.0",
-		     "elvees,ecam03dm",
+	model = "ECAM03BL r1.0";
+	compatible = "elvees,ecam03bl-r1.0",
+		     "elvees,ecam03bl",
 		     "elvees,mcom03";
 };
