arm64: dts: elvees: Specify default pinctrl for UART3
Issue: #MCOM03SW-1457
Change-Id: If540cca3e076cd899f351f603c721c9fb73f66d5

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -635,6 +635,9 @@
 			reg-shift = <2>;
 			reg-io-width = <4>;
 			status = "disabled";
+
+			pinctrl-names = "default";
+			pinctrl-0 = <&uart3_mux_data>;
 		};
 
 		gpio0: gpio@1610000 {
