dt-bindings: pinctrl: elvees: hsperiph: Combine similar pins
QSPI1_SCLK pin has similar properties with EMAC0_RGMII_MDIO and
EMAC1_RGMII_MDIO, so put them together.

input-schmitt-{disable,enable} properties are not part of
EMAC{0,1}_RGMII_{MDC,TXC} pins, so delete them. Also `slew-rate` is not
mentioned, so append it to their properties list.

Issue: #MCOM03SW-754
Issue: #MCOM03SW-2000
Change-Id: I45372427f91025ae2fd5a51ef6406d14fd6b9718
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>
(cherry picked from commit fab193143f61a6eeed553b55760a1b9fd0eee73e)

--- a/Documentation/devicetree/bindings/pinctrl/elvees,pinctrl-mcom03-hsperiph.yaml
+++ b/Documentation/devicetree/bindings/pinctrl/elvees,pinctrl-mcom03-hsperiph.yaml
@@ -281,7 +281,7 @@ additionalProperties:
 
           properties:
             pins:
-              enum: [EMAC0_RGMII_MDIO, EMAC1_RGMII_MDIO]
+              enum: [EMAC0_RGMII_MDIO, EMAC1_RGMII_MDIO, QSPI1_SCLK]
 
             bias-disable:
               $ref: pincfg-node.yaml#/properties/bias-disable
@@ -328,10 +328,13 @@ additionalProperties:
               $ref: pincfg-node.yaml#/properties/drive-strength
               enum: [0, 2, 4, 6, 8, 10, 12]
               description: 0mA puts the pads in high impedance mode.
-            input-schmitt-enable:
-              $ref: pincfg-node.yaml#/properties/input-schmitt-enable
-            input-schmitt-disable:
-              $ref: pincfg-node.yaml#/properties/input-schmitt-disable
+            slew-rate:
+              $ref: pincfg-node.yaml#/properties/slew-rate
+              enum: [0, 3]
+              default: 3
+              description: |
+                0: Lower Slew rate (slower edges)
+                3: Higher Slew rate (faster edges)
 
           additionalProperties: false
 
@@ -361,38 +364,6 @@ additionalProperties:
           properties:
             groups:
               enum: [qspi1_ss, qspi1_data]
-
-            bias-disable:
-              $ref: pincfg-node.yaml#/properties/bias-disable
-            bias-bus-hold:
-              $ref: pincfg-node.yaml#/properties/bias-bus-hold
-            bias-pull-up:
-              $ref: pincfg-node.yaml#/properties/bias-pull-up
-            bias-pull-down:
-              $ref: pincfg-node.yaml#/properties/bias-pull-down
-            drive-strength:
-              $ref: pincfg-node.yaml#/properties/drive-strength
-              enum: [0, 2, 4, 6, 8, 10, 12]
-              description: 0mA puts the pads in high impedance mode.
-            input-schmitt-enable:
-              $ref: pincfg-node.yaml#/properties/input-schmitt-enable
-            input-schmitt-disable:
-              $ref: pincfg-node.yaml#/properties/input-schmitt-disable
-            slew-rate:
-              $ref: pincfg-node.yaml#/properties/slew-rate
-              enum: [0, 3]
-              default: 3
-              description: |
-                0: Lower Slew rate (slower edges)
-                3: Higher Slew rate (faster edges)
-
-          additionalProperties: false
-
-        - type: object
-
-          properties:
-            pins:
-              enum: [qspi1_sclk]
 
             bias-disable:
               $ref: pincfg-node.yaml#/properties/bias-disable
