dt-bindings: pinctrl: elvees: hsperiph: Add missing EMAC pins
Issue: #MCOM03SW-754
Issue: #MCOM03SW-2000
Change-Id: I65064ced5c77d58a3c1cbfc323e95798de7d71cb
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>
(cherry picked from commit 1d260a0b5d5fd2a1b80bb6cc9765aedd81ef7e50)

--- a/Documentation/devicetree/bindings/pinctrl/elvees,pinctrl-mcom03-hsperiph.yaml
+++ b/Documentation/devicetree/bindings/pinctrl/elvees,pinctrl-mcom03-hsperiph.yaml
@@ -242,6 +242,27 @@ additionalProperties:
           additionalProperties: false
 
         - type: object
+
+          properties:
+            pins:
+              enum: [EMAC0_RGMII_RXC, EMAC1_RGMII_RXC]
+
+            bias-disable:
+              $ref: pincfg-node.yaml#/properties/bias-disable
+            bias-bus-hold:
+              $ref: pincfg-node.yaml#/properties/bias-bus-hold
+            bias-pull-up:
+              $ref: pincfg-node.yaml#/properties/bias-pull-up
+            bias-pull-down:
+              $ref: pincfg-node.yaml#/properties/bias-pull-down
+            input-schmitt-enable:
+              $ref: pincfg-node.yaml#/properties/input-schmitt-enable
+            input-schmitt-disable:
+              $ref: pincfg-node.yaml#/properties/input-schmitt-disable
+
+          additionalProperties: false
+
+        - type: object
           description: |
             emac_v18: Contains EMAC{0,1}_* pins.
 
