dt-bindings: pinctrl: elvees: hsperiph: Create table groups/pins
To ease the search readability for all groups and pins of a certain
peripheral, a table is created.

Issue: #MCOM03SW-754
Issue: #MCOM03SW-2000
Change-Id: Ibbacaa8647384e9b4358044bfa4436b75371863c
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>
(cherry picked from commit fe7f453b5682cc38b1036c553e2027fe4af96d55)

--- a/Documentation/devicetree/bindings/pinctrl/elvees,pinctrl-mcom03-hsperiph.yaml
+++ b/Documentation/devicetree/bindings/pinctrl/elvees,pinctrl-mcom03-hsperiph.yaml
@@ -29,6 +29,36 @@ additionalProperties:
     description: |
       All additional object properties are pin configuration nodes that client
       devices reference.
+
+      special pins - are pins that can be configured separately.
+
+      -------------------------------------------------------------
+      |     periph      |     groups      |     special pins      |
+      -------------------------------------------------------------
+      |    SDMMC{0,1}   | sdmmc{0,1}_ctrl |     SDMMC{0,1}_CMD    |
+      |                 | sdmmc{0,1}_data |     SDMMC{0,1}_CLK    |
+      |                 | sdmmc_wp        |                       |
+      |                 | sdmmc_cdn       |                       |
+      |                 | sdmmc_18en_pwr  |                       |
+      -------------------------------------------------------------
+      |    EMAC{0,1}    | emac{0,1}_ctrl  | EMAC{0,1}_RGMII_MDIO  |
+      |                 | emac{0,1}_tx    | EMAC{0,1}_RGMII_MDC   |
+      |                 | emac{0,1}_rx    | EMAC{0,1}_RGMII_TXC   |
+      |                 | emac_v18        | EMAC{0,1}_RGMII_RXC   |
+      -------------------------------------------------------------
+      |    QSPI1        | qspi1_ctrl      |     QSPI1_SCLK        |
+      |                 | qspi1_ss        |                       |
+      |                 | qspi1_data      |                       |
+      |                 |                 |                       |
+      -------------------------------------------------------------
+      |    NAND         | nfc_ctrl        |     NFC_REN           |
+      |                 | nfc_ale_cle     |     NFC_WEN           |
+      |                 | nfc_cen         |     NFC_DQS           |
+      |                 | nfc_io          |                       |
+      |                 | nfc_rbn         |                       |
+      -------------------------------------------------------------
+      |                 | hsperiph_misc   |                       |
+      -------------------------------------------------------------
   then:
     properties:
       phandle: true
