mcom03_defconfig: Enable CONFIG_THERMAL
Generic thermal sysfs driver offers a generic mechanism for thermal
management using one or more thermal zone and cooling device.

The actual thermal management scheme is described in the device tree.

Issue: #MCOM03SW-1844
Change-Id: I7ccc8f208c19835c0a783f2e68302e18819a35e7

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -305,6 +305,7 @@ CONFIG_SENSORS_MR75202=y
 CONFIG_SENSORS_LM73=m
 CONFIG_SENSORS_S5851A=m
 CONFIG_SENSORS_EMC2305=m
+CONFIG_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
 CONFIG_USBPCWATCHDOG=m
