--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -253,6 +253,7 @@ CONFIG_W1_SLAVE_SMEM=m
 CONFIG_SENSORS_MR75202=y
 CONFIG_SENSORS_LM73=m
 CONFIG_SENSORS_EMC2305=m
+CONFIG_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
 CONFIG_USBPCWATCHDOG=m
