arm64: dts: elvees: Describe MFBSP0 and MFBSP1 GPIOs
Issue: #MCOM03SW-1778
Change-Id: I9c0a0e9b21f25dbbdef60a46e823345a133f4c49

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -289,6 +289,28 @@
 				 <&service_ucg1 SERVICE_QSPI0_EXT_CLK>;
 			num-cs = <4>;
 		};
+
+		mfbsp0_gpio: gpio-controller@0x1f0a1300 {
+			compatible = "elvees,mfbsp-gpio";
+			clocks = <&service_ucg1 SERVICE_MFBSP0_CLK>;
+			clock-names = "bus";
+			reg-names = "dat", "dirout";
+			reg = <0 0x1f0a1308 0 4>, <0 0x1f0a130c 0 4>;
+			#gpio-cells = <2>;
+			gpio-controller;
+			status = "disabled";
+		};
+
+		mfbsp1_gpio: gpio-controller@0x1f0b1300 {
+			compatible = "elvees,mfbsp-gpio";
+			clocks = <&service_ucg1 SERVICE_MFBSP1_CLK>;
+			clock-names = "bus";
+			reg-names = "dat", "dirout";
+			reg = <0 0x1f0b1308 0 4>, <0 0x1f0b130c 0 4>;
+			#gpio-cells = <2>;
+			gpio-controller;
+			status = "disabled";
+		};
 	};
 
 	media@1200000 {
