--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -295,6 +295,7 @@ CONFIG_PINCTRL_DWAPB=y
 CONFIG_PINCTRL_MCP23S08=m
 CONFIG_MCOM03_PINCTRL=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_W1=m
