arm64: dts: elvees: trustphonecb: Describe LEDs
Issue: #MCOM03SW-1778
Change-Id: Iaf3dd079aa2612b395f97b2f4b8c5e7ed58ecbd0

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -19,6 +19,25 @@
 		     "elvees,trustphonepm",
 		     "elvees,mcom03";
 
+	trustphonecb-leds {
+		compatible = "gpio-leds";
+
+		red {
+			gpios = <&mfbsp1_gpio 4 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+
+		green {
+			gpios = <&mfbsp1_gpio 5 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+
+		blue {
+			gpios = <&mfbsp1_gpio 6 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+	};
+
 	adv7513_cec_clk: adv7513_cec_clk {
 		#clock-cells = <0>;
 		compatible = "fixed-clock";
