--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -311,6 +311,7 @@ CONFIG_DW_WATCHDOG=y
 CONFIG_USBPCWATCHDOG=m
 CONFIG_MFD_DLN2=m
 CONFIG_MFD_SYSCON=y
+CONFIG_TPS6105X=m
 CONFIG_MFD_ARIZONA_I2C=m
 CONFIG_MFD_WM8998=y
 CONFIG_REGULATOR=y
@@ -567,6 +568,7 @@ CONFIG_MMC_USHC=m
 CONFIG_MMC_REALTEK_USB=m
 CONFIG_MEMSTICK=m
 CONFIG_MEMSTICK_REALTEK_USB=m
+CONFIG_LEDS_CLASS_FLASH=m
 CONFIG_LEDS_GPIO=m
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=m
