arm64: dts: elvees: Enable snps,parkmode-disable-ss-quirk
It seems like DWC3 IP used in MCom-03 has a bug, described in [1], [2].
The bug can be worked around by enabling snps,parkmode-disable-ss-quirk.

[1] https://lore.kernel.org/linux-usb/20191014141718.22603-1-narmstrong@baylibre.com
[2] https://lore.kernel.org/linux-usb/CAKgpwJWU3jB0DWEKE09TOV+YLceBFJ75ZirAXQbuhj8v3FwjXg@mail.gmail.com/

Issue: #MCOM03SW-1702
Change-Id: I78520b22c096d444ed8f387139bdeecbddb68d62
Signed-off-by: Dmitriy Zagrebin <dzagrebin@elvees.com>
(cherry picked from commit 04a8a8a393d5fab22a09695ead155d1172e0ea06)

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -788,6 +788,7 @@
 				reg = <0 0x10000000 0 0x100000>;
 				interrupts = <GIC_SPI 9 IRQ_TYPE_LEVEL_HIGH>;
 				snps,dis_u2_susphy_quirk;
+				snps,parkmode-disable-ss-quirk;
 			};
 		};
 
@@ -810,6 +811,7 @@
 				reg = <0 0x10100000 0 0x100000>;
 				interrupts = <GIC_SPI 10 IRQ_TYPE_LEVEL_HIGH>;
 				snps,dis_u2_susphy_quirk;
+				snps,parkmode-disable-ss-quirk;
 			};
 		};
 	};
