leds: Add driver for TPS6105x torch and flash mode
TPS6105x is a high-power white LED driver.
This commit adds torch and flash mode support for TPS6105x MFD driver.

Issue: #MCOM03SW-1783
Change-Id: Ifd59d68273f5273eeed194317e2bc7aef8d1ca35

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -756,6 +756,16 @@ config LEDS_NIC78BX
 	  To compile this driver as a module, choose M here: the module
 	  will be called leds-nic78bx.
 
+config LEDS_TPS6105X_FLASH
+	tristate "LED support for TI TPS6105X"
+	depends on LEDS_CLASS
+	depends on LEDS_CLASS_FLASH
+	default y if TPS6105X
+	help
+		This driver supports TPS61050/TPS61052 LED chips in FLASH mode.
+		It is a single boost converter primarily for white LEDs and
+		audio amplifiers.
+
 comment "LED Triggers"
 source "drivers/leds/trigger/Kconfig"
 
