--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -443,6 +443,7 @@ CONFIG_SND_SOC=m
 CONFIG_SND_DESIGNWARE_I2S=m
 CONFIG_SND_DESIGNWARE_PCM=y
 CONFIG_SND_SOC_ELVEES_TRUSTPHONE_WM8998=m
+CONFIG_SND_SOC_ALC5623=m
 CONFIG_SND_SOC_SGTL5000=m
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_USB=y
