arm64: dts: elvees: ngfwcb: Specify correct cells for lan7431 node
In abscence of correct '#address-cells' and '#size-cells' properties
in 'lan7431@7,0' node the following warnings appear during the build
process:

  DTC     arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dtb
  arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dtb: Warning (reg_format): /sdr@1900000/pcie@0/pcie@2400000/dwc-pcie@0,0/plx-pex@1,0/plx-pex@2,5/lan7431@7,0/ethernet-phy@0:reg: property has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1)
  arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dtb: Warning (pci_device_bus_num): Failed prerequisite 'reg_format'
  arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dtb: Warning (avoid_default_addr_size): /sdr@1900000/pcie@0/pcie@2400000/dwc-pcie@0,0/plx-pex@1,0/plx-pex@2,5/lan7431@7,0/ethernet-phy@0: Relying on default #address-cells value
  arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dtb: Warning (avoid_default_addr_size): /sdr@1900000/pcie@0/pcie@2400000/dwc-pcie@0,0/plx-pex@1,0/plx-pex@2,5/lan7431@7,0/ethernet-phy@0: Relying on default #size-cells value

Since 'ethernet-phy@0' node has only one cell in the 'reg' property,
'lan7431@7,0' should have one address cell and zero size cells.

Issue: #MCOM03SW-1915
Change-Id: Ic602c319010be31b7c4725b322ace4440792948b

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
@@ -251,6 +251,8 @@
 
 				lan7431@7,0 {
 					reg = <0 0 0 0 0>;
+					#address-cells = <1>;
+					#size-cells = <0>;
 					phy-connection-type = "rgmii-rxid";
 					phy-handle = <&ethernet_phy>;
 
