arm64: dts: elvees: Describe PWM
Issue: #MCOM03SW-1961
Change-Id: Ibfb655c1286577d4c7e652d730415270e4dc995f

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -2094,6 +2094,13 @@
 				};
 			};
 		};
+
+		pwm: pwm@0x1770000 {
+			compatible = "elvees,mcom-pwm";
+			reg = <0 0x1770000 0 0x1000>;
+			#pwm-cells = <2>;
+			clocks = <&lsperiph1_ucg0 LSP1_PWM0_CLK>;
+		};
 	};
 
 	xti_clk: xti_clk {
