arm64: dts: elvees: elvmc03smarc: Describe CPU thermal zones
Describe thermal zone cpu-thermal for thermal management using
fan speed control based on CPU temperature as measured by PVT.

Issue: #MCOM03SW-1844
Change-Id: I4aa0f2f95f899740bc6a56601c8b34d3c10a5ec3

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -247,7 +247,7 @@
 			clocks = <&service_ucg1 SERVICE_APB_CLK>;
 		};
 
-		pvt@1f050000 {
+		pvt: pvt@1f050000 {
 			compatible = "moortec,mr75202";
 			reg = <0 0x1f050000 0 0x1000>;
 			clocks = <&service_ucg1 SERVICE_PVTCTR_CLK>;
