--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
@@ -304,3 +304,23 @@
 		};
 	};
 };
+
+/*
+ * The fans are enabled on boot (a hardware feature).
+ * The fan controller driver disables them if the CPU temperature is
+ * lower than the trip point.
+ * Upon reaching the trip point the thermal subsystem driver enables the fans.
+ *
+ * Thermal zones can be enabled/disabled via sysfs by writing said state into
+ * the corresponding /sys/class/thermal/thermal_zoneX/mode file.
+ */
+&cpu_thermal {
+	cooling_maps: cooling-maps {
+		map0 {
+			trip = <&cpu_alert0>;
+			cooling-device = <&fancontrol
+					  THERMAL_NO_LIMIT
+					  THERMAL_NO_LIMIT>;
+		};
+	};
+};
