--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -197,6 +197,7 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_SPI=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_MCP23S08=y
+CONFIG_MCOM03_PINCTRL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_PINCTRL_DWAPB=y
 CONFIG_GPIO_PCA953X=y
