arm64: mcom03_defconfig: Enable BQ25895 battery charger driver
Issue: #MCOM03SW-1782
Change-Id: I938f97b62c72aa71ee1987c0e5418b0b8960799c

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -302,6 +302,7 @@ CONFIG_W1=m
 CONFIG_W1_MASTER_DS2482=m
 CONFIG_W1_SLAVE_SMEM=m
 CONFIG_BATTERY_MAX17042=m
+CONFIG_CHARGER_BQ25890=m
 CONFIG_SENSORS_MR75202=y
 CONFIG_SENSORS_LM73=m
 CONFIG_SENSORS_S5851A=m
