--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -276,6 +276,27 @@
 		maxim,over-heat-temp = <600>;
 		maxim,over-volt = <4300>;
 	};
+
+	bq25890: charger@6a {
+		compatible = "ti,bq25890";
+		reg = <0x6a>;
+		interrupt-parent = <&gpio1a>;
+		interrupts = <6 IRQ_TYPE_EDGE_FALLING>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&bq25895_default>;
+
+		// for Robiton Li-Polymer LP855080 battery
+		ti,battery-regulation-voltage = <4200000>;
+		ti,charge-current = <4100000>;
+		ti,termination-current = <41000>;
+		ti,precharge-current = <128000>;
+		ti,minimum-sys-voltage = <3400000>;
+		ti,boost-voltage = <5000000>;
+		ti,boost-max-current = <2400000>;
+
+		ti,use-ilim-pin;
+		ti,thermal-regulation-threshold = <70>;
+	};
 };
 
 /* pinctrl driver doesn't enable pad receiver when GPIO pin is requested as an
@@ -289,6 +310,11 @@
 
 	pwr_button_cfg_default: gpioa1-power-cfg {
 		pins = "GPIOA_7";
+		input-enable;
+	};
+
+	bq25895_default: bq25895_default-cfg {
+		pins = "GPIOA_6";
 		input-enable;
 	};
 };
