--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -105,6 +105,8 @@ CONFIG_CAIF=m
 CONFIG_CAIF_USB=m
 CONFIG_NFC=m
 CONFIG_NFC_PN533_USB=m
+CONFIG_PCI=y
+CONFIG_PCIE_MCOM03=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
