arm64: dts: elvees: mcom03bub: Enable input on GPIO1a PHY's
LSPERIPH1 pins which used to handle interrupts from PHY's by EMAC0/1
should activate `input-enable`.

Activating this attribute is moved from U-Boot to the kernel.

Issue: #MCOM03SW-1279
Change-Id: Ibe04c1c114080e71c50e94a4e9d4c63b8e834f9d

--- a/arch/arm64/boot/dts/elvees/mcom03-bub-r1.3.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-bub-r1.3.0.dts
@@ -83,8 +83,26 @@
 	};
 };
 
+
+&lsperiph1_pinctrl {
+	emac0_int_cfg: emac0-int-cfg {
+		phy {
+			pins = "GPIOA_6";
+			input-enable;
+		};
+	};
+
+	emac1_int_cfg: emac1-int-cfg {
+		phy {
+			pins = "GPIOA_7";
+			input-enable;
+		};
+	};
+};
+
 &emac0 {
 	status = "okay";
+	pinctrl-0 = <&emac0_default &emac0_int_cfg>;
 	phy-handle = <&ethernet_phy0>;
 	reset-gpios = <&gpio0c 6 GPIO_ACTIVE_LOW>;
 
@@ -119,6 +137,7 @@
 
 &emac1 {
 	status = "okay";
+	pinctrl-0 = <&emac1_default &emac1_int_cfg>;
 	phy-handle = <&ethernet_phy1>;
 	reset-gpios = <&gpio0c 7 GPIO_ACTIVE_LOW>;
 
